# voiceOS

./: .gitignore  AUTHENTICATION_COMPLETE_SUMMARY.md  AUTHENTICATION_DEPLOYMENT_GUIDE.md  AUTHENTICATION_IMPLEMENTATION.md  AUTHENTICATION_QUICK_START.md  AUTOMATED_STRESS_TEST_PLAN.md  AUTOMATED_STRESS_TEST_RESULTS.md  BACKEND_SETUP_CHECKLIST.md  BOUNDARIES.md  CODEX_PRODUCTION_PLAN.md  DAY2_COMPLETION_SUMMARY.md  DAY2_GRPC_SETUP.md  DEPLOYMENT_REMINDER.md  INTEGRATION_TEST_CHECKLIST.md  LAUNCH_READINESS_PLAN.md  LOGO_AND_STATUS_FIXES.md  MIGRATION_COMPLETE.md  PRODUCTION_READINESS_PLAN.md  PUBLIC_SITE_INTEGRATION_PLAN.md  PUBLIC_SITE_INTEGRATION_SUMMARY.md  README.md  SECURITY.md  STARTFRAME_FIX_PLAN.md  STRESS_TEST_CURRENT_STATE.md  TELNYX_MIGRATION_COMPLETE.md  commit_msg.txt  package-lock.json  package.json  vercel.json
voice-ai-os/voice-core/: .gitignore  README.md  SETUP.md  example.py  pyproject.toml  requirements.txt  setup_venv.ps1  setup_venv.sh
voice-core/: .env.example  .env.production.example  .gitignore  BUILD_SUMMARY.md  DAY1_COMPLETION_SUMMARY.md  DAY1_SUMMARY.md  DAY2_COMPLETION_SUMMARY.md  DAY2_DEMO_SUMMARY.md  QUICKSTART.md  README.md  START_DEMO.md  V1_ACCEPTANCE_CHECKLIST.md  VALIDATION_ARTIFACTS.md  check_db_tables.py  check_tenants.py  pyproject.toml  pytest.ini  requirements.production.txt  requirements.txt  run_production.sh
voice-core/docs/: N8N_SETUP.md  SESSION_HANDOFF.md  TELNYX_STREAMING_DIAGNOSTIC.md  pipecat_alternatives_production_grade.md  pipecat_production_architecture_diagram.md  prompt_architecture_research.md
voice-core/scripts/: check_telnyx_config.py  configure_telnyx_texml.py  create_call_control_app.py  create_test_tenant_telnyx.py  demo_call.py  event_timeline_viewer.html  fix_telnyx_webhook.py  friendly_receptionist.py  generate_grpc_stubs.py  inspect_tenants_schema.py  ngrok_all_recent.py  ngrok_event_types.py  ngrok_find_answered.py  ngrok_find_call_initiated.py  ngrok_latest_hangup.py  ngrok_latest_initiated_full.py  ngrok_latest_initiated_timing.py  remove_voice_api_connection.py  run_stress_test_debug.py  run_stress_test_direct_env.py  run_telnyx_load_test_2.py  telnyx_live_answer.py  test_llm_call.py  test_pipecat_llms.py  test_smart_turn.py  update_test_tenant_template.py  web_demo_instructions.md
voice-core/src/: __init__.py  bot_runner.py  main.py
voice-core/templates/: appointment_booking.json  full_receptionist.json  lead_capture.json
(+492 files in other folders)
